yaml/web.yaml
##################################################################################################
# home service
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-v1
  labels:
    app: home
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home
      version: v1
  template:
    metadata:
      labels:
        app: home
        version: v1
    spec:
      containers:
      - name: home
        image: gihonglee/home:1
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /app/sessions
            name: sessions
        ports:
        - containerPort: 8000
        securityContext:
          runAsUser: 1000
      volumes:
        - name: sessions
          hostPath:
            path: /root/sessions
            type: DirectoryOrCreate
---
##################################################################################################
# board service
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-v1
  labels:
    app: board
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: board
      version: v1
  template:
    metadata:
      labels:
        app: board
        version: v1
    spec:
      containers:
      - name: board
        image: gihonglee/board:1
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /app/sessions
            name: sessions
        ports:
        - containerPort: 8000
        securityContext:
          runAsUser: 1000
      volumes:
        - name: sessions
          hostPath:
            path: /root/sessions
            type: DirectoryOrCreate
---
##################################################################################################
# auth service
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-v1
  labels:
    app: auth
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
      version: v1
  template:
    metadata:
      labels:
        app: auth
        version: v1
    spec:
      containers:
      - name: auth
        image: gihonglee/auth:1
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /app/sessions
            name: sessions
        ports:
        - containerPort: 8000
        securityContext:
          runAsUser: 1000
      volumes:
        - name: sessions
          hostPath:
            path: /root/sessions
            type: DirectoryOrCreate
---
##################################################################################################
# create service
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: create-v1
  labels:
    app: create
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: create
      version: v1
  template:
    metadata:
      labels:
        app: create
        version: v1
    spec:
      containers:
      - name: create
        image: gihonglee/create:1
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /app/sessions
            name: sessions
        ports:
        - containerPort: 8000
        securityContext:
          runAsUser: 1000
      volumes:
        - name: sessions
          hostPath:
            path: /root/sessions
            type: DirectoryOrCreate
---
##################################################################################################
# topic service
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topic-v1
  labels:
    app: topic
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: topic
      version: v1
  template:
    metadata:
      labels:
        app: topic
        version: v1
    spec:
      containers:
      - name: topic
        image: gihonglee/topic:1.0.1
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /app/sessions
            name: sessions
        ports:
        - containerPort: 8000
        securityContext:
          runAsUser: 1000
      volumes:
        - name: sessions
          hostPath:
            path: /root/sessions
            type: DirectoryOrCreate
---
##################################################################################################
# update service
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: update-v1
  labels:
    app: update
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: update
      version: v1
  template:
    metadata:
      labels:
        app: update
        version: v1
    spec:
      containers:
      - name: update
        image: gihonglee/update:1
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /app/sessions
            name: sessions
        ports:
        - containerPort: 8000
        securityContext:
          runAsUser: 1000
      volumes:
        - name: sessions
          hostPath:
            path: /root/sessions
            type: DirectoryOrCreate
