yaml/db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grad-db
  labels:
    app: grad-db
    service: grad-db
spec:
  ports:
  - port: 3306
    name: tcp
  selector:
    app: grad-db
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysql
spec:
  hosts:
  - "grad-db.default.svc.cluster.local"
  http:
  - route:
    - destination:
        host: "grad-db.default.svc.cluster.local"
##########################################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grad-db-v1
  labels:
    app: grad-db
    version: mysql-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grad-db
      version: mysql-v1
  template:
    metadata:
      labels:
        app: grad-db
        version: mysql-v1
    spec:
      containers:
      - name: grad-db
        image: gihonglee/grad-db:1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
        securityContext:
          runAsUser: 1000
