yaml/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grad-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grad
spec:
  hosts:
  - "*"
  gateways:
  - grad-gateway
  http:
  - match:
    - uri:
        prefix: /board
    route:
    - destination:
        host: "board.default.svc.cluster.local"
        port:
          number: 8080
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        host: "auth.default.svc.cluster.local"
        port:
          number: 8080
  - match:
    - uri:
        prefix: /Create
    route:
    - destination:
        host: "create.default.svc.cluster.local"
        port:
          number: 8080
  - match:
    - uri:
        prefix: /topic
    route:
    - destination:
        host: "topic.default.svc.cluster.local"
        port:
          number: 8080
  - match:
    - uri:
        prefix: /update
    route:
    - destination:
        host: "update.default.svc.cluster.local"
        port:
          number: 8080
  - route:
    - destination:
        host: "home.default.svc.cluster.local"
        port:
          number: 8080
