yaml/homeVS.yaml
apiVersion: v1
kind: Service
metadata:
  name: home
  labels:
    app: home
    service: home
spec:
  ports:
  - port: 8080
    targetPort: 8000
    name: http
  selector:
    app: home
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-home
spec:
  host: home.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      app: home
      version: v1
  - name: v2
    labels:
      app: homev2
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: home
spec:
  hosts:
  - "home.default.svc.cluster.local"
  http:
  - match:
    - headers:
        end-user:
          exact: test
    route:
    - destination:
        host: "home.default.svc.cluster.local"
        subset: v2
  - route:
    - destination:
        host: "home.default.svc.cluster.local"
        subset: v1
      weight: 90
    - destination:
        host: "home.default.svc.cluster.local"
        subset: v2
      weight: 10
##########################################################
