yaml/topicVS.yaml
apiVersion: v1
kind: Service
metadata:
  name: topic
  labels:
    app: topic
    service: topic
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: topic
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: circuit-breaker-for-topic-service
spec:
  host: "topic.default.svc.cluster.local"
  subsets:
  - name: topic
    labels:
      version: v1
  - name: rtopic
    labels:
      version: v2
  trafficPolicy:
    #2. Circuit Breaker가 작동하는 기준을 설정
    outlierDetection:
      consecutiveErrors: 3
      interval: 20s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: topic
spec:
  hosts:
  - "topic.default.svc.cluster.local"
  http:
  - route:
    - destination:
        host: "topic.default.svc.cluster.local"
        subset: topic
  - route:
    - destination:
        host: "topic.default.svc.cluster.local"
        subset: rtopic
