yaml/virtualService.yaml
apiVersion: v1
kind: Service
metadata:
  name: board
  labels:
    app: board
    service: board
spec:
  ports:
  - port: 8080
    targetPort: 8000
    name: http
  selector:
    app: board
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: board
spec:
  hosts:
  - "board.default.svc.cluster.local"
  http:
  - route:
    - destination:
        host: "board.default.svc.cluster.local"
##########################################################
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app: auth
    service: auth
spec:
  ports:
  - port: 8080
    targetPort: 8000
    name: tcp
  selector:
    app: auth
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth
spec:
  hosts:
  - "auth.default.svc.cluster.local"
  http:
  - route:
    - destination:
        host: "auth.default.svc.cluster.local"
##########################################################
---
apiVersion: v1
kind: Service
metadata:
  name: create
  labels:
    app: create
    service: create
spec:
  ports:
  - port: 8080
    targetPort: 8000
    name: tcp
  selector:
    app: create
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: create
spec:
  hosts:
  - "create.default.svc.cluster.local"
  http:
  - route:
    - destination:
        host: "create.default.svc.cluster.local"
##########################################################
---
apiVersion: v1
kind: Service
metadata:
  name: tag
  labels:
    app: tag
    service: tag
spec:
  ports:
  - port: 8080
    targetPort: 8000
    name: tcp
  selector:
    app: tag
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tag
spec:
  hosts:
  - "tag.default.svc.cluster.local"
  http:
  - route:
    - destination:
        host: "tag.default.svc.cluster.local"
